# IMX_dataverbetering

./: .env.template  .gitignore  README.md  build-cli-app.py  build-gui-app.py  build-guid-app.py  pyproject.toml  requirements.txt  run_pd.bat  settings.json
.github/workflows/: build.yml  pre-release.yml
apps/: build_helpers.py
apps/cli/: cliApp.py  exception_handler.py  main.py
apps/cli/commands/: container_commands.py  diff_population_commands.py  health_check_commands.py  revision_commands.py  xml_commands.py
apps/cli/commands/experimental/: comments_commands.py  container_commands.py  experimental_commands.py  health_check_commands.py
apps/nicegui/: api.py  build-guid-app.py  guiApp.py  main.py
cliApp/: cliApp.py
cliApp/commands/: container_commands.py  diff_population_commands.py  health_check_commands.py  revision_commands.py
data/markdowns/: container-xml-formating-disclaimer.md  km-kibbon-values-disclaimer.md
imxCli/: __init__.py  process_dataverbetering.py  settings.py
imxCli/cliApp/: cliApp.py  cli_app.py  exception_handler.py
imxCli/revision/: imx_modifier.py  input_validation.py  process_revision.py  revision_template.py
imxCli/utils/: calculate_from_to_measures.py  custom_logger.py  exceptions.py  helpers.py  imx_utils.py  input_validation.py
imxRevision/: process_dataverbetering.py
imxRevision/cliApp/: cli_app.py
imxRevision/qgis_tools/: add_z_labels_to_line_points.py
imxRevision/utils/: imx_utils.py
imxTools/: settings.py
imxTools/cliApp/: cliApp.py  exception_handler.py
imxTools/cliApp/commands/: container_commands.py  diff_population_commands.py  health_check_commands.py  manifest_commands.py  revision_commands.py  xml_commands.py
imxTools/comments/: comments_enums.py  comments_extractor.py  comments_replacer.py  openpyxl_helpers.py
imxTools/imxXml/: fouling_mark_copyer.py  kilometer_ribbon.py
imxTools/insights/: container.py  diff_and_population.py  manifest.py  measure.py  measure_analyse.py  mesaure_analyse_enums.py
imxTools/insightsTools/: diff_and_population.py  fouling_mark_copyer.py  kilometer_ribbon.py  manifest.py
imxTools/revision/: comments_extractor.py  imx_modifier.py  input_validation.py  location_syntax_validator.py  process_revision.py  revision_enums.py  revision_template.py
imxTools/utils/: calculate_from_to_measures.py  columnEnum.py  helpers.py  measure_line.py
imxTools/xml/: kilometer_ribbon.py  xsd_list.py
input/xsd-12.0.0/: IMSpoor-BGTObjects.xml  IMSpoor-Extensions.xml  IMSpoor-InstallationDesign.xml  IMSpoor-Legacy.xml  IMSpoor-ManagementAreas.xml  IMSpoor-Observations.xml  IMSpoor-RailwayElectrification.xml  IMSpoor-SignalingDesign.xml  Manifest.xml  SignalingDesign.xml
qgis_tools/: TODO_move_to_qgis_project.md  add_lufo.py  add_z_labels_to_line_points.py  get_linestring_x_length_graph.py  qgis_aggregate_to_geometry_layers.py  selected_line_grpah.py
sample_data/: 20250430_202130-diff-edit.xlsx  20250430_202130-diff.xlsx  comment-list.xlsx  imx_124_single_file-processed.xml  imx_12_xml_file.xml  issuelist-processed.xlsx  issuelist.xlsx  revision-template-dataverbeteringen-eos-20250428.xlsx
sample_data/imx_12_container_folder/: Manifest.xml
src/: custom_logger.py  process_dataverbetering.py  settings.py
src/imx_toots/: print_from_to.py
src/qgis_tools/: get_linestring_x_length_graph.py  selected_line_grpah.py
src/typerCliApp/: cli_app.py
src/utils/: imx_utils.py  input_validation.py
tests/: helpers.py  test_cli_app.py  test_cli_app_diff.py  test_cli_app_diff_geojson.py  test_cli_app_population.py  test_cli_app_population_geojson.py  test_cli_app_revision.py  test_column_enum.py  test_comments.py  test_container.py  test_logic_add_km.py  test_logic_container.py  test_logic_measure.py  test_logic_revision.py  test_measure.py  test_measure_analyse.py  test_measure_line.py  test_revision.py
tests/cli/: test_cli_app_container.py  test_cli_app_diff.py  test_cli_app_health-check.py  test_cli_app_population.py  test_cli_app_revision.py  test_cli_comments.py  test_cli_container.py  test_cli_diff.py  test_cli_health_check.py  test_cli_population.py  test_cli_revision.py
tests/data/: issuelist.xlsx
tests/fixtures/: files_and_paths.py
